tests/baselines/reference/computedPropertyNames33_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames33_ES5.ts(5,13): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames33_ES5.ts (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        bar() {
            var obj = {
                [foo<T>()]() { }
                ~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            };
            return 0;
        }
    }